(a) Fixed label not showing inside drop down select filter, (b) Removed code that hides TABs until they load, (c) A fix to image field for the recently added "YooTheme" Widgetkit suppport

--- a/com_flexicontent_v2.x/admin/assets/css/flexicontentbackend.css
+++ b/com_flexicontent_v2.x/admin/assets/css/flexicontentbackend.css
@@ -669,6 +669,11 @@ div label.lang_box input,
 div label.lang_box .lang_lbl {
 	display:inline-block; float:left;
 }
+div label.state_box img.lang_lbl,
+div label.lang_box img.lang_lbl {
+	margin: 6px 2px 2px 2px !important;
+	border: 1px solid lightgray;
+}
 
 /* Import view */
 #flexicontent table label.fckey {
